files/keel/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: keel
  namespace: kube-system
  labels:
    app: keel
spec:
  ports:
    - port: 9300
      protocol: TCP
      name: keel
  selector:
    app: keel
  sessionAffinity: None
