files/keel/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: keel
  namespace: kube-system
  labels:
    app: keel
spec:
  rules:
    - host: keel.techn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keel
                port:
                  number: 9300
